# keras

./: .bazelrc  .bazelversion  .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  .replit  .travis.yml  AI-Visualization.py  BUILD  CHANGES.md  CITATION.cff  CONTRIBUTING.md  CUSTOM_GRADIENT_JAX_FIX.md  Deep_Learning_Project.ipynb  Dockerfile  EVALUATION_COMPLETE.md  GAN_on_mnist.ipynb  IMPLEMENTATION_PLAN.md  ISSUE_TEMPLATE.md  LICENSE  MANIFEST.in  Makefile  Model_Pruning.ipynb  OPTIMIZATION_REPORT.md  PERFORMANCE_REPORT.md  PERFORMANCE_SUMMARY.md  PULL_REQUEST_TEMPLATE.md  README.md  README_CN.md  RESULT.md  SECURITY.md  TODO_DEBUG_TORCH_MODEL_PARALLEL.md  TODO_DISTRIBUTE_VARIABLE_FIX.md  TODO_MODEL_PARALLEL_LOGGING.md  TORCH_JIT_COMPILE_LIMITATIONS.md  TensorFlow_Issue_Template.md  Test_github.txt  Train_KerasRNN2.ipynb  Train_KerasRNN2_1.ipynb  (+109 more)
.circleci/: config.yml
.devcontainer/: Dockerfile  (+3 more)
tmp_build_dir/: pyproject.toml
tmp_build_dir/keras/: __init__.py
tmp_build_dir/keras/api/_tf_keras/: __init__.py
tmp_build_dir/keras/api/_tf_keras/keras/regularizers/: __init__.py
tmp_build_dir/keras/api/applications/efficientnet_v2/: __init__.py
tmp_build_dir/keras/api/applications/resnet_v2/: __init__.py
tmp_build_dir/keras/api/ops/image/: __init__.py
tmp_build_dir/keras/api/optimizers/schedules/: __init__.py
tmp_build_dir/keras/api/random/: __init__.py
tmp_build_dir/keras/src/: api_export.py  version.py
tmp_build_dir/keras/src/applications/: convnext.py  densenet.py  efficientnet.py  imagenet_utils.py  vgg19.py  xception.py
tmp_build_dir/keras/src/backend/: __init__.py
tmp_build_dir/keras/src/backend/common/: __init__.py  stateless_scope.py  symbolic_scope.py
tmp_build_dir/keras/src/backend/jax/: image.py  linalg.py  numpy.py
tmp_build_dir/keras/src/backend/numpy/: export.py  image.py  nn.py  numpy.py  trainer.py
tmp_build_dir/keras/src/backend/openvino/: core.py  excluded_concrete_tests.txt
tmp_build_dir/keras/src/backend/tensorflow/: export.py  image.py
tmp_build_dir/keras/src/backend/torch/: image.py  nn.py  numpy.py  random.py  trainer.py
tmp_build_dir/keras/src/backend/torch/optimizers/: torch_adadelta.py  torch_adam.py  torch_sgd.py
tmp_build_dir/keras/src/callbacks/: callback_list.py  progbar_logger.py
tmp_build_dir/keras/src/constraints/: __init__.py
tmp_build_dir/keras/src/datasets/: cifar.py  cifar100.py  mnist.py  reuters.py
tmp_build_dir/keras/src/distribution/: __init__.py  distribution_lib.py
tmp_build_dir/keras/src/export/: onnx.py  tfsm_layer.py
tmp_build_dir/keras/src/initializers/: constant_initializers.py
tmp_build_dir/keras/src/layers/: input_spec.py
tmp_build_dir/keras/src/layers/activations/: __init__.py  leaky_relu.py
tmp_build_dir/keras/src/layers/attention/: additive_attention.py  grouped_query_attention.py
tmp_build_dir/keras/src/layers/convolutional/: conv3d.py  conv3d_transpose.py  depthwise_conv1d.py
tmp_build_dir/keras/src/layers/core/: dense.py  lambda_layer.py  reversible_embedding.py
tmp_build_dir/keras/src/layers/merging/: add.py  base_merge.py
tmp_build_dir/keras/src/layers/normalization/: group_normalization.py  spectral_normalization.py
tmp_build_dir/keras/src/layers/pooling/: base_pooling.py  global_average_pooling1d.py  global_max_pooling2d.py
tmp_build_dir/keras/src/layers/preprocessing/: category_encoding.py  hashing.py  integer_lookup.py  mel_spectrogram.py  pipeline.py  string_lookup.py
tmp_build_dir/keras/src/layers/regularization/: activity_regularization.py  dropout.py  gaussian_dropout.py  gaussian_noise.py  spatial_dropout.py
tmp_build_dir/keras/src/layers/reshaping/: repeat_vector.py  zero_padding2d.py
tmp_build_dir/keras/src/layers/rnn/: gru.py  time_distributed.py
tmp_build_dir/keras/src/legacy/: losses.py
tmp_build_dir/keras/src/legacy/preprocessing/: image.py
tmp_build_dir/keras/src/legacy/saving/: saving_utils.py
tmp_build_dir/keras/src/losses/: __init__.py  losses.py
tmp_build_dir/keras/src/metrics/: confusion_metrics.py  correlation_metrics.py  f_score_metrics.py  reduction_metrics.py
tmp_build_dir/keras/src/models/: functional.py  variable_mapping.py
tmp_build_dir/keras/src/ops/: image.py
tmp_build_dir/keras/src/optimizers/: adadelta.py  adafactor.py  adagrad.py  adamax.py  muon.py  rmsprop.py
tmp_build_dir/keras/src/optimizers/schedules/: __init__.py  learning_rate_schedule.py
tmp_build_dir/keras/src/quantizers/: quantizers.py
tmp_build_dir/keras/src/random/: __init__.py
tmp_build_dir/keras/src/saving/: file_editor.py  keras_saveable.py  saving_lib.py  serialization_lib.py
tmp_build_dir/keras/src/trainers/: compile_utils.py  epoch_iterator.py
tmp_build_dir/keras/src/trainers/data_adapters/: data_adapter_utils.py  grain_dataset_adapter.py
tmp_build_dir/keras/src/utils/: __init__.py  audio_dataset_utils.py  config.py  dataset_utils.py  file_utils.py  image_utils.py  jax_layer.py  module_utils.py  progbar.py  tf_utils.py  traceback_utils.py
tmp_build_dir/keras/src/wrappers/: __init__.py
(+4943 files in other folders)
