[build-system]
requires = ["setuptools >=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "keras"
authors = [
    {name = "Keras team", email = "keras-users@googlegroups.com"},
]
description = "Multi-backend Keras"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache License 2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
]
dynamic = ["version", "dependencies"]

[project.urls]
Home = "https://keras.io/"
Repository = "https://github.com/keras-team/keras"

[tool.setuptools.dynamic]
version = {attr = "keras.src.version.__version__"}
dependencies = {file = "requirements-common.txt"}
# Run also: pip install -r requirements.txt

[tool.setuptools.packages.find]
include = ["keras", "keras.*"]

[tool.black]
line-length = 80
target-version = []

# black needs this to be a regex
# to add more exclude expressions
# append `| <regex-expr>` (e.g. `| .*_test\\.py`) to this list
extend-exclude = """
(
  examples/
)
"""

[tool.isort]
profile = "black"
force_single_line = "True"
known_first_party = ["keras", "tests"]
default_section = "THIRDPARTY"
line_length = 80
extend_skip_glob=[
    "examples/*",
    "guides/*",
]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::ImportWarning",
    "ignore::RuntimeWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::FutureWarning",
    "ignore::UserWarning",
    # Ignore a spurious warning on tf-nightly related to save model changes.
    "ignore:Custom mask layers require a config",
]
addopts = "-vv"

# Do not run tests in the `build` folders
norecursedirs = ["build"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@abstract",
    "raise NotImplementedError",
]
omit = [
    "*/*_test.py",
    "keras/src/legacy/*",
]

[tool.coverage.run]
branch = true
omit = [
    "*/*_test.py",
    "keras/src/legacy/*",
]

